# sakamichi-scheduler

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-hinata-schedule-notifier.yml  deploy-sakamichi-scraper.yml  schedule-collect-hinata-schedule.yml
architecture_diagram/: .gitignore  Makefile  diagram.py  pyproject.toml
sakamichi_infra/: .gitignore  iam.tf  justfile  main.tf  secret_manager.tf  service.tf  service_account.tf
sakamichi_infra/.terraform/: terraform.tfstate
sakamichi_infra/deployment_manager/: sakamichi_infra_config.yml
sakamichi_infra/terraform/: .terraform.lock.hcl  cloud_run.tf  cloud_scheduler.tf  cloud_storage.tf  iam.tf  main.tf  monitoring.tf  service.tf  service_account.tf  workload_identity.tf
sakamichi_noticer/: .project  deploy.sh  pom.xml
sakamichi_noticer/hinata-schedule-notifier/: pom.xml
sakamichi_noticer/hinata-schedule-notifier/scripts/: deploy.sh
sakamichi_noticer/hinata-schedule-notifier/src/main/java/tokyo/sakamichinotifier/: CloudStorageObject.java  GcsEvent.java
sakamichi_noticer/hinata-schedule-notifier/src/main/java/tokyo/sakamichinotifier/hinata/: HinataScheduleNotificationFunction.java  HinataScheduleNotifierApplication.java
sakamichi_noticer/hinata-schedule-notifier/src/main/java/tokyo/sakamichinotifier/hinataschedulenotifier/: HinataScheduleNotifierApplication.java
sakamichi_noticer/hinata-schedule-notifier/src/main/resources/: application-dev.yml  application-test.yml  application.properties  application.yml  bootstrap-test.yml  bootstrap.yml
sakamichi_noticer/hinata-schedule-notifier/src/test/java/tokyo/sakamichinotifier/hinata/: HinataScheduleNotifierApplicationTests.java
sakamichi_noticer/src/main/java/tokyo/sakamichi_noticer/: UpdateSchedule.java
sakamichi_noticer/src/main/java/tokyo/sakamichi_noticer/eventpojos/: GcsEvent.java
sakamichi_noticer_backup/: main.py  pyproject.toml
sakamichi_noticer_backup/model/: schedule.py
sakamichi_scheduler/scraping/: settings.py
sakamichi_scraper/: .gitignore  Dockerfile  Makefile  compose.yml  justfile  pyproject.toml  scrapy.cfg  service.yml  setup.py
sakamichi_scraper/sakamichi_scraper/: items.py  middlewares.py  output.jl  pipelines.py  settings.py
sakamichi_scraper/sakamichi_scraper/spiders/: hinata_schedule_spider.py  nogi_schedule_spider.py  schedule_spider.py
tests/: test_sakamichi_scheduler.py
(+31 files in other folders)
