[tool.poetry]
name = "architecture_diagram"
version = "0.1.0"
description = ""
authors = ["Matsui <ptiringo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
diagrams = "^0.23.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
