[tool.poetry]
name = "architecture_diagram"
version = "0.1.0"
description = ""
authors = ["Matsui <ptiringo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
diagrams = "^0.23.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
