[tool.poetry]
name = "sakamichi-scheduler"
version = "0.1.0"
description = ""
authors = ["Matsui <ptiringo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Scrapy = "^2.8.0"
python-dateutil = "^2.8.2"
scrapyd = "^1.3.0"
scrapyd-client = "^1.2.2"
google-cloud-storage = "^2.7.0"
scrapyrt = "^0.13.0"
scrapy-splash = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
black = ">=22.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
